<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">江理一家</string>
    <string name="action_settings">江理一家</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_second">登陆界面</string>
    <string name="title_activity_three">ThreeActivity</string>
    <string name="title_activity_four">FourActivity</string>
    <string name="title_activity_five">FiveActivity</string>
    <string name="titie1">江理报修管理</string>
    <string name="titie2">用户名：</string>
    <string name="titie3">密码：</string>
    <string name="button01">登陆</string>
    <string name="button02">注册</string>
    <string name="title2">注册信息</string>
    <string name="reet1">姓名：</string>
    <string name="reet2">手机号：</string>
    <string name="reet3">密码：</string>
    <string name="rebtn1">确定提交</string>
    <string name="title_activity_login">登陆</string>
    <string name="title_activity_resiter">注册</string>
    <string name="title_activity_comment">评价</string>
    <string name="meun">功能菜单</string>
    <string name="chaxun">申报维修</string>
    <string name="denglu06">维修申报</string>
    <string name="renyuan">人员登陆</string>
    <string name="weixiuqingdan">历史维修记录</string>
    <string name="pingjia">评价反馈</string>
    <string name="title_activity_declare">申请保修</string>
    <string name="title_activity_list">显示报修单</string>

</resources>
